--- a/aplicacion/templates/Forms/crear_venta.html
+++ b/aplicacion/templates/Forms/crear_venta.html
@@ -1,5 +1,6 @@
 {% extends 'base_ventas.html' %} {% load static %} 
-{% block venta_title %}Registrar Nueva Venta{% endblock %} {% block venta_content %}
+{% block venta_title %}Registrar Nueva Venta{% endblock %} 
+{% block venta_content %}
 <div class="card shadow-sm">
   <div class="card-body">
     <form id="crearVentaForm" method="post">
