--- a/aplicacion/static/css/styles.css
+++ b/aplicacion/static/css/styles.css
@@ -1,6 +1,20 @@
 /* ======================================== TIPOGRAFIAS =================================== */
 /* static/css/styles.css */
 
+:root {
+    /* Azules Marino */
+    --azul-marino-oscuro: #00203F;
+    --azul-marino-medio: #004080;
+    --azul-marino-claro: #005BBB;
+    
+    /* Azules Neutrales */
+    --azul-acero: #4682B4;
+    --gris-azul: #708090;
+    
+    /* Blanco */
+    --blanco-humo: #F5F5F5;
+  }
+
 @font-face {
     font-family: 'NotoSansJP';
     src: url('/static/fonts/NotoSansJP-VariableFont_wght.ttf') format('truetype');
@@ -15,8 +29,8 @@
 }
 
 body {
-    background-color: #f5f5f5;
-    color: #F5F5F5;
+    background-color: var(--blanco-humo);
+    color: var(--blanco-humo);
     font-family: 'NotoSansJP', sans-serif;
     font-size: 16px;
     line-height: 1.5;
@@ -33,13 +47,13 @@ body {
 }
 
 .bg-principal{
-    background-color: #00203F;
+    background-color: var(--azul-marino-oscuro);
 }
 .bg-subprincipal{
-    background-color: #004080;
+    background-color: var(--azul-marino-medio);
 }
 .nav-link{
-    color: #f5f5f5;
+    color: var(--blanco-humo);
 }
 
 
