--- a/aplicacion/templates/Forms/crear_compras.html
+++ b/aplicacion/templates/Forms/crear_compras.html
@@ -114,7 +114,7 @@
                 </h5>
 
                 <p class="mb-1 mt-3"><strong>Precio referencia:</strong></p>
-                <h5 id="precio-referencia" class="text-muted">$0.00</h5>
+                <h5 id="precio-referencia" class="text-muted">COP 0.00</h5>
 
 
                 <div id="variacion-precio" class="small mt-1"></div>
