--- a/aplicacion/templates/base_ventas.html
+++ b/aplicacion/templates/base_ventas.html
@@ -3,7 +3,8 @@
 
 {% block dashboard %}
 <!-- Carga jQuery primero -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+ <script src="{% static 'js/jquery.min.js' %}"></script>
+<!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
 
 <!-- link css de bootstrap -->
 <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> -->
@@ -26,9 +27,6 @@
 {% block venta_content %}
 {% endblock %}
 
-
-<!-- jQuery (solo si lo necesitas para otros plugins) -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <script src="{% static 'vendor/select2/js/select2.min.js' %}"></script>
 
