--- a/aplicacion/templates/vistas/dashboard.html
+++ b/aplicacion/templates/vistas/dashboard.html
@@ -61,6 +61,7 @@
   </div>
 </div>
 
+<!-- Seccion estadisticas generales -->
 <div class="row">
   <!-- Total de Artículos -->
   <div class="col-md-3 mb-4">
@@ -109,11 +110,11 @@
   </div>
 </div>
 
-<!-- Nueva sección de métricas avanzadas -- PERFECTAMENTE BIEN -->
+<!-- Seccion de Metricas avanzadas, mejor cliente, mejor vendedor, articulo mas vendido -->
 <div class="row mt-4">
   <div class="col-md-6 mb-4">
       <div class="card h-100">
-          <div class="card-header bg-light">
+          <div class="card-header" style="background-color: #004080; color: #f5f5f5;">
               <h5 class="mb-0">Top Performers</h5>
           </div>
           <div class="card-body">
@@ -159,7 +160,7 @@
 
   <div class="col-md-6 mb-4">
     <div class="card h-100">
-        <div class="card-header bg-light">
+        <div class="card-header" style="background-color: #004080; color: #f5f5f5;">
             <h5 class="mb-0">Margen de Ganancia</h5>
         </div>
         <div class="card-body">
@@ -196,56 +197,10 @@
 </div>
 </div>
 
-<!-- Sección de Productos por Categoría -->
-<div class="col-md-6 mb-4">
-  <div class="card h-100">
-      <div class="card-header bg-light">
-          <h5 class="mb-0">Productos por Categoría</h5>
-      </div>
-      <div class="card-body">
-          <div class="table-responsive">
-              <table class="table table-sm">
-                  <thead>
-                      <tr>
-                          <th>Categoría</th>
-                          <th class="text-end">Cantidad</th>
-                          <th class="text-end">Valor Total</th>
-                          <th class="text-end">% del Total</th>
-                      </tr>
-                  </thead>
-                  <tbody>
-                      {% for cat in productos_por_categoria %}
-                      <tr>
-                          <td>{{ cat.categoria__nombre|default:"Sin categoría" }}</td>
-                          <td class="text-end">{{ cat.total|intcomma }}</td>
-                          <td class="text-end">COP {{ cat.valor_total|default:0|floatformat:2|intcomma }}</td>
-                          <td class="text-end">
-                              {{ cat.valor_total|div:valor_inventario|mul:100|floatformat:2 }}%
-                          </td>
-                      </tr>
-                      {% empty %}
-                      <tr>
-                          <td colspan="4" class="text-center py-3">No hay categorías registradas</td>
-                      </tr>
-                      {% endfor %}
-                  </tbody>
-                  <tfoot>
-                      <tr class="table-light">
-                          <th>Total</th>
-                          <th class="text-end">{{ total_articulos|intcomma }}</th>
-                          <th class="text-end">COP {{ valor_inventario|floatformat:2|intcomma }}</th>
-                          <th class="text-end">100%</th>
-                      </tr>
-                  </tfoot>
-              </table>
-          </div>
-      </div>
-  </div>
-</div>
-
+<!-- Seccion de Productos por categgoria con grafica y ventana modal -->
 <div class="container mt-4">
   <div class="card">
-      <div class="card-header bg-primary text-white">
+      <div class="card-header text-white" style="background-color: #004080;">
           <h3 class="mb-0">
               <i class="fas fa-tags me-2"></i>Productos por Categoría
           </h3>
@@ -273,7 +228,7 @@
                               <tr>
                                   <td>{{ item.categoria__nombre|default:"Sin categoría" }}</td>
                                   <td class="text-end">{{ item.total }}</td>
-                                  <td class="text-end">${{ item.valor_total|floatformat:2|intcomma }}</td>
+                                  <td class="text-end">COP {{ item.valor_total|floatformat:2|intcomma }}</td>
                               </tr>
                               {% empty %}
                               <tr>
@@ -285,7 +240,7 @@
                               <tr>
                                   <th>Total</th>
                                   <th class="text-end">{{ productos_por_categoria|length }}</th>
-                                  <th class="text-end">${{ total_general|floatformat:2|intcomma }}</th>
+                                  <th class="text-end">COP {{ total_general|floatformat:2|intcomma }}</th>
                               </tr>
                           </tfoot>
                       </table>
@@ -296,10 +251,10 @@
   </div>
 </div>
 
-
+<br>
 <!-- Ventas por período -- PERFECTAMENTE BIEN -->
 <div class="card mb-4">
-  <div class="card-header">
+  <div class="card-header" style="background-color: #004080; color: #f5f5f5;">
       <h5>Ventas por Período</h5>
   </div>
   <div class="card-body">
@@ -332,9 +287,9 @@
   </div>
 </div>
 
-<!-- Recent Activity -->
-<div class="card mb-4">
-  <div class="card-header d-flex justify-content-between align-items-center">
+<!-- Seccion de Articulos por Reabastecer -->
+<div class="card mb-4 ">
+  <div class="card-header d-flex justify-content-between align-items-center" style="background-color: #004080; color: #f5f5f5;">
     <h5>Artículos por Reabastecer</h5>
   </div>
   <div class="card-body p-0">
@@ -356,8 +311,8 @@
             <td>{{ articulo.codigo }}</td>
             <td>{{ articulo.nombre|truncatechars:20 }}</td>
             <td>{{ articulo.categoria.nombre|default:"-" }}</td>
-            <td>{{ articulo.stock_actual|floatformat:"0" }}</td>
-            <td>{{ articulo.stock_minimo|floatformat:"0" }}</td>
+            <td>{{ articulo.stock_actual|floatformat:"2" }}</td>
+            <td>{{ articulo.stock_minimo|floatformat:"2" }} {{articulo.unidad_medida}}</td>
             <td>{{ articulo.dias_restantes|default:"-" }}</td>
           </tr>
           {% empty %}
@@ -373,13 +328,14 @@
   </div>
 </div>
 
+<!-- Seccion de Ultimas Transacciones -->
 <div class="card">
-  <div class="card-header d-flex justify-content-between align-items-center">
+  <div class="card-header d-flex justify-content-between align-items-center" style="background-color: #004080; color: #f5f5f5;">
     <h5>Últimas Transacciones</h5>
     <div class="btn-group" id="filtro-transacciones">
-      <button class="btn btn-sm btn-outline-secondary" data-filtro="entrada">Entradas</button>
-      <button class="btn btn-sm btn-outline-secondary" data-filtro="salida">Salidas</button>
-      <button class="btn btn-sm btn-outline-primary active" data-filtro="todas">Todas</button>
+      <button class="btn btn-sm btn-outline-secondary" style="color: #f5f5f5" data-filtro="entrada">Entradas</button>
+      <button class="btn btn-sm btn-outline-secondary" style="color: #f5f5f5" data-filtro="salida">Salidas</button>
+      <button class="btn btn-sm btn-outline-primary active" style="color: #f5f5f5" data-filtro="todas">Todas</button>
     </div>
   </div>
   <div class="card-body p-0">
@@ -405,7 +361,7 @@
               </span>
             </td>
             <td>{{ movimiento.articulo.nombre|truncatechars:20 }}</td>
-            <td>{{ movimiento.cantidad|floatformat:"0" }}</td>
+            <td>{{ movimiento.cantidad|floatformat:"2" }}</td>
             <td>
               {{ movimiento.usuario.get_full_name|default:movimiento.usuario.username }}
             </td>
@@ -423,9 +379,20 @@
     </div>
   </div>
 </div>
+<br>
+
+<!-- Botones de descargas - Catalogo y Excel -->
+<a href="{% url 'catalogo_pdf' %}" class="btn btn-danger" target="_blank">
+  <i class="bi bi-file-earmark-pdf-fill"></i> Generar Catálogo PDF
+</a>
+
+<a href="{% url 'talonario_pagos' %}" class="btn btn-success">
+  <i class="bi bi-file-excel-fill"></i> Descargar Talonario de Pagos (Excel)
+</a>
 
 <br /><br /><br /><br /><br />
 
+<!-- Boton de Acceso Rapido -->
 <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 1000">
   <div class="btn-group dropup">
     <button
